--- a/views/index.pug
+++ b/views/index.pug
@@ -122,6 +122,12 @@ block content
 							.overlay-text Blueways
 						img(src="images/blueways.png")
 				.col-md-6
+					a(href="http://www.goserviceas.no").image-container.center-block
+						.overlay
+							.overlay-text Go' Service AS
+						img(src="images/goserviceimg.png")
+			.row
+				.col-md-6
 					a(href="http://www.hobanservicegroup.no/hjem").image-container.center-block
 						.overlay
 							.overlay-text Hoban Renhold AS
